Fixed the default value of DATABASE_URL in .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -12,7 +12,7 @@ APP_SECRET=96054558daeafea809d12eb054a9298e
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For a MySQL database, use: "mysql://root@127.0.0.1:3306/symfony?charset=utf8mb4&serverVersion=5.7"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/blog.sqlite"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
